// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GitHubSettings component renders when not signed in 1`] = `
<div>
  <h4>
    GitHub
  </h4>
  <Blueprint3.Callout>
    <p>
      Your fiddles can be published as GitHub Gists - that way you can share your fiddles with the world!
    </p>
    <Blueprint3.Button
      icon="log-in"
      onClick={[Function]}
      text="Sign in"
    />
  </Blueprint3.Callout>
</div>
`;

exports[`GitHubSettings component renders when signed in 1`] = `
<div>
  <h4>
    GitHub
  </h4>
  <Blueprint3.Callout>
    <p>
      Your fiddles can be published as public GitHub Gists. Using the personal access token you gave us, we logged you into GitHub as 
      <code>
        Test User
      </code>
      .
    </p>
    <Blueprint3.Button
      icon="log-out"
      onClick={[MockFunction]}
      text="Sign out"
    />
  </Blueprint3.Callout>
</div>
`;
